Add logger to gateway and improve error handling

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -6,15 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "import src.powerstudio_gateway as powerstudio_gateway\n",
     "\n",
     "\n",
+    "logging.getLogger().setLevel(logging.DEBUG)\n",
     "\n",
     "# Create gateway object to connect to PowerStudio\n",
-    "gateway = powerstudio_gateway.PowerStudioGateway(\"http://registrador.upc.edu\", 80)\n",
+    "gateway = powerstudio_gateway.PowerStudioGateway(\"http://registrador.upc.edu:80\")\n",
     "\n",
-    "gateway.import_tags(\"./tags_powerstudio.txt\")\n",
-    "\n"
+    "gateway.import_tags(\"./tags_powerstudio.txt\")\n"
    ]
   },
   {
@@ -277,7 +278,47 @@
     {
      "data": {
       "text/plain": [
-       "{'CT TR14 Climatitz 1.AI1': 0.0,\n",
+       "{'CT TR14 Refr 1.API': 0.0,\n",
+       " 'CT TR14 Refr 1.CPI': 0.0,\n",
+       " 'CT TR14 Refr 1.IPI': 0.0,\n",
+       " 'CT TR14 Refr 1.COSI': 1.0,\n",
+       " 'CT TR14 Refr 1.VAE': 0.0,\n",
+       " 'CT TR14 Refr 1.AE': 215994.175,\n",
+       " 'CT TR14 Refr 1.CE': 15.757,\n",
+       " 'CT TR14 Refr 1.IE': 182511.586,\n",
+       " 'CT TR14 Refr 2.AI1': 1.15,\n",
+       " 'CT TR14 Refr 2.AI2': 1.6,\n",
+       " 'CT TR14 Refr 2.AI3': 1.15,\n",
+       " 'CT TR14 Refr 2.ANI': 3.15,\n",
+       " 'CT TR14 Refr 2.DAI1': 95.6,\n",
+       " 'CT TR14 Refr 2.DAI2': 59.9,\n",
+       " 'CT TR14 Refr 2.DAI3': 98.9,\n",
+       " 'CT TR14 Refr 2.VAI': 0.9,\n",
+       " 'CT TR14 Refr 2.API': 0.0,\n",
+       " 'CT TR14 Refr 2.CPI': 0.0,\n",
+       " 'CT TR14 Refr 2.IPI': 0.0,\n",
+       " 'CT TR14 Refr 2.COSI': 1.0,\n",
+       " 'CT TR14 Refr 2.VAE': 0.0,\n",
+       " 'CT TR14 Refr 2.AE': 225492.172,\n",
+       " 'CT TR14 Refr 2.CE': 10.908,\n",
+       " 'CT TR14 Refr 2.IE': 186388.527,\n",
+       " 'CT TR14 Bomba Calor 1.AI1': 1.3,\n",
+       " 'CT TR14 Bomba Calor 1.AI2': 0.85,\n",
+       " 'CT TR14 Bomba Calor 1.AI3': 0.9,\n",
+       " 'CT TR14 Bomba Calor 1.ANI': 1.2,\n",
+       " 'CT TR14 Bomba Calor 1.DAI1': 84.5,\n",
+       " 'CT TR14 Bomba Calor 1.DAI2': 99.3,\n",
+       " 'CT TR14 Bomba Calor 1.DAI3': 96.3,\n",
+       " 'CT TR14 Bomba Calor 1.VAI': 0.7,\n",
+       " 'CT TR14 Bomba Calor 1.API': 0.2,\n",
+       " 'CT TR14 Bomba Calor 1.CPI': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1.IPI': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1.COSI': 1.0,\n",
+       " 'CT TR14 Bomba Calor 1.VAE': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1.AE': 152494.909,\n",
+       " 'CT TR14 Bomba Calor 1.CE': 9.637,\n",
+       " 'CT TR14 Bomba Calor 1.IE': 120131.783,\n",
+       " 'CT TR14 Climatitz 1.AI1': 0.0,\n",
        " 'CT TR14 Climatitz 1.AI2': 0.0,\n",
        " 'CT TR14 Climatitz 1.AI3': 0.0,\n",
        " 'CT TR14 Climatitz 1.ANI': 0.0,\n",
@@ -317,79 +358,6 @@
        " 'CT TR14 Refr 1.DAI2': 97.2,\n",
        " 'CT TR14 Refr 1.DAI3': 53.0,\n",
        " 'CT TR14 Refr 1.VAI': 0.8,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Heat_energy_E1': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Info_code': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Program_version': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.STATUS': 1282.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.VDTTM': 3062024134007.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Volume_V1': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Volume_V1_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Volume_V1_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_flow': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_flow_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_flow_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_power': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_power_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_power_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Cooling_energy_E3': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Cooling_energy_E3_Decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Heat_energy_E1': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Info_code': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Program_version': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.STATUS': 1282.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.VDTTM': 3062024134139.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Volume_V1': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Volume_V1_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 2 - Kamstrup.Volume_V1_decimal': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Info_code': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Program_version': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.STATUS': 1282.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.VDTTM': 3062024134012.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Volume_V1': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Volume_V1_Units': 0.0,\n",
-       " 'CT TR14 Refr 1 - Kamstrup.Volume_V1_decimal': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Actual_flow': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Actual_flow_Units': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Actual_flow_decimal': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Actual_power': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Actual_power_Units': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Actual_power_decimal': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Cooling_energy_E3': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Cooling_energy_E3_Decimal': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Heat_energy_E1': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Info_code': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Program_version': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.STATUS': 1282.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.VDTTM': 3062024134017.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Volume_V1': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Volume_V1_Units': 0.0,\n",
-       " 'CT TR14 Refr 2 - Kamstrup.Volume_V1_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_flow': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_flow_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_flow_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_power': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_power_Units': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_power_decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Cooling_energy_E3': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Cooling_energy_E3_Decimal': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
        " 'CT TR14 Bombes Calor.API': 0.0,\n",
        " 'CT TR14 Bombes Calor.CPI': 0.0,\n",
        " 'CT TR14 Bombes Calor.IPI': 0.0,\n",
@@ -430,46 +398,79 @@
        " 'CT TR14 Refr 1 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
        " 'CT TR14 Refr 1 - Kamstrup.Heat_energy_E1': 0.0,\n",
        " 'CT TR14 Refr 1 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
-       " 'CT TR14 Refr 1.API': 0.0,\n",
-       " 'CT TR14 Refr 1.CPI': 0.0,\n",
-       " 'CT TR14 Refr 1.IPI': 0.0,\n",
-       " 'CT TR14 Refr 1.COSI': 1.0,\n",
-       " 'CT TR14 Refr 1.VAE': 0.0,\n",
-       " 'CT TR14 Refr 1.AE': 215994.175,\n",
-       " 'CT TR14 Refr 1.CE': 15.757,\n",
-       " 'CT TR14 Refr 1.IE': 182511.586,\n",
-       " 'CT TR14 Refr 2.AI1': 1.15,\n",
-       " 'CT TR14 Refr 2.AI2': 1.6,\n",
-       " 'CT TR14 Refr 2.AI3': 1.15,\n",
-       " 'CT TR14 Refr 2.ANI': 3.15,\n",
-       " 'CT TR14 Refr 2.DAI1': 95.6,\n",
-       " 'CT TR14 Refr 2.DAI2': 59.9,\n",
-       " 'CT TR14 Refr 2.DAI3': 98.9,\n",
-       " 'CT TR14 Refr 2.VAI': 0.9,\n",
-       " 'CT TR14 Refr 2.API': 0.0,\n",
-       " 'CT TR14 Refr 2.CPI': 0.0,\n",
-       " 'CT TR14 Refr 2.IPI': 0.0,\n",
-       " 'CT TR14 Refr 2.COSI': 1.0,\n",
-       " 'CT TR14 Refr 2.VAE': 0.0,\n",
-       " 'CT TR14 Refr 2.AE': 225492.172,\n",
-       " 'CT TR14 Refr 2.CE': 10.908,\n",
-       " 'CT TR14 Refr 2.IE': 186388.527,\n",
-       " 'CT TR14 Bomba Calor 1.AI1': 1.3,\n",
-       " 'CT TR14 Bomba Calor 1.AI2': 0.85,\n",
-       " 'CT TR14 Bomba Calor 1.AI3': 0.9,\n",
-       " 'CT TR14 Bomba Calor 1.ANI': 1.2,\n",
-       " 'CT TR14 Bomba Calor 1.DAI1': 84.5,\n",
-       " 'CT TR14 Bomba Calor 1.DAI2': 99.3,\n",
-       " 'CT TR14 Bomba Calor 1.DAI3': 96.3,\n",
-       " 'CT TR14 Bomba Calor 1.VAI': 0.7,\n",
-       " 'CT TR14 Bomba Calor 1.API': 0.2,\n",
-       " 'CT TR14 Bomba Calor 1.CPI': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1.IPI': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1.COSI': 1.0,\n",
-       " 'CT TR14 Bomba Calor 1.VAE': 0.0,\n",
-       " 'CT TR14 Bomba Calor 1.AE': 152494.909,\n",
-       " 'CT TR14 Bomba Calor 1.CE': 9.637,\n",
-       " 'CT TR14 Bomba Calor 1.IE': 120131.783,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Heat_energy_E1': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Info_code': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Program_version': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.STATUS': 1282.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.VDTTM': 4062024072718.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Volume_V1': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Volume_V1_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Volume_V1_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_flow': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_flow_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_flow_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_power': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_power_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Actual_power_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Cooling_energy_E3': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Cooling_energy_E3_Decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Heat_energy_E1': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Info_code': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Program_version': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.STATUS': 1282.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.VDTTM': 4062024072713.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Volume_V1': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Volume_V1_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 2 - Kamstrup.Volume_V1_decimal': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Info_code': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Program_version': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.STATUS': 1282.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.VDTTM': 4062024072723.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Volume_V1': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Volume_V1_Units': 0.0,\n",
+       " 'CT TR14 Refr 1 - Kamstrup.Volume_V1_decimal': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Actual_flow': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Actual_flow_Units': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Actual_flow_decimal': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Actual_power': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Actual_power_Units': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Actual_power_decimal': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Cooling_energy_E3': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Cooling_energy_E3_Decimal': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Heat_energy_E1': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Heat_energy_E1_Units': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Heat_energy_E1_decimal': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Info_code': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Inlet_temperature_T1': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Outlet_temperature_T2': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Program_version': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.STATUS': 1282.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.VDTTM': 4062024072728.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Volume_V1': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Volume_V1_Units': 0.0,\n",
+       " 'CT TR14 Refr 2 - Kamstrup.Volume_V1_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_flow': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_flow_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_flow_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_power': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_power_Units': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Actual_power_decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Cooling_energy_E3': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Cooling_energy_E3_Decimal': 0.0,\n",
+       " 'CT TR14 Bomba Calor 1 - Kamstrup.Cooling_energy_E3_Units': 0.0,\n",
        " 'CT TR14 Bomba Calor 2.AI1': 1.5,\n",
        " 'CT TR14 Bomba Calor 2.AI2': 0.8,\n",
        " 'CT TR14 Bomba Calor 2.AI3': 0.8,\n",
